--- a/contacto.html
+++ b/contacto.html
@@ -77,7 +77,7 @@
                             <a class="header_link js-scroll" href="quienes.html">Quienes Somos</a>
                         </li>
                         <li class="header_item">
-                            <a class="header_link js-scroll" href="carta.html">Carta</a>
+                            <a class="header_link js-scroll" href="/templates/carta.html">Carta</a>
                         </li>
                         <li class="header_item">
                             <a class="header_link js-scroll" href="contacto.html">Contacto</a>
