--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
                         <a class="header__link js-scroll" href="quienes.html">Quienes Somos</a>
                     </li>
                     <li class="header__item">
-                        <a class="header__link js-scroll" href="/templates/carta.html">Carta</a>
+                        <a class="header__link js-scroll" href="templates/carta.html">Carta</a>
                     </li>
                     <li class="header__item">
                         <a class="header__link js-scroll" href="contacto.html">Contacto</a>
@@ -77,7 +77,7 @@
                             <a class="header_link js-scroll" href="quienes.html">Quienes Somos</a>
                         </li>
                         <li class="header_item">
-                            <a class="header_link js-scroll" href="/templates/carta.html">Carta</a>
+                            <a class="header_link js-scroll" href="templates/carta.html">Carta</a>
                         </li>
                         <li class="header_item">
                             <a class="header_link js-scroll" href="contacto.html">Contacto</a>
