--- a/contacto.html
+++ b/contacto.html
@@ -134,8 +134,8 @@
     </div>
 </footer>
 <!-- ******************** FIN FOOTER ******************** -->
-<script src="../JS/main.js"></script>
-<script src="../JS/app.js"></script>
+<script src="JS/main.js"></script>
+<script src="JS/app.js"></script>
 </body>
 
 </html>
