--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </footer>
     <!-- ******************** FIN FOOTER ******************** -->
     
-    <script src="../JS/main.js"></script>
-    <script src="../JS/app.js"></script>
+    <script src="JS/main.js"></script>
+    <script src="JS/app.js"></script>
 </body>
 </html>
